deps/v8/test/message/new-target-for-loop.out
*%(basename)s:5: SyntaxError: Invalid left-hand side in for-loop
function f() { for (new.target in {}); }
                    ^^^^^^^^^^
SyntaxError: Invalid left-hand side in for-loop
